--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 <p class="result"></p>
 
 <script>
-  let url = "https://via.placeholder.com/300/09f/fff.png",
+  let url = "https://via.placeholder.com/300/09f/fff.png";
   
   const imageShareFn = () => {
     fetch(url, { mode: 'no-cors'}).then(function (response) {
