--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
    // })
 
     async function createFile(){
-      let response = await fetch(url);
+      let response = await fetch(url,{ mode: 'no-cors'});
       let data = await response.blob();
       let metadata = {
         type: 'image/png'
