--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <h1>Lavesh RoXXX</h1>
-<img src="https://via.placeholder.com/300/09f/fff.png"
+<img src="./Selection_309.png"
      style="-webkit-user-select: none;max-width: 100%;margin: auto;">
 
 <p>
