--- a/home.html
+++ b/home.html
@@ -45,8 +45,8 @@
         navigator.share({
           title: 'Ashish share a file',
           files: [file],
-          text: 'Learn web development on MDN!',
-          url: "https://via.placeholder.com/300/09f/fff.png",
+          text: 'sharing images is fun'
+        
         });
       }
       // ... do something with the file or return it
