--- a/home.html
+++ b/home.html
@@ -4,12 +4,9 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <title>Web share test</title>
-    <style>
-
-    </style>
 </head>
 <body>
-<h1>Lavesh RoXXX</h1>
+<h1>Web share test</h1>
 <img src="./Selection_309.png"
      style="-webkit-user-select: none;max-width: 100%;margin: auto;">
 
@@ -57,9 +54,6 @@
 
   const btn = document.querySelector('button');
   const imgBtn = document.querySelector('img');
-
-  const resultPara = document.querySelector('.result');
-
   btn.addEventListener('click', imageShareFn);
   imgBtn.addEventListener('click', imageShareFn);
 
