--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
      style="-webkit-user-select: none;max-width: 100%;margin: auto;">
 
 <h2>hosted image</h2>
-<img id="img2" src="https://via.placeholder.com/300/09f/fff.png"
+<img id="img2" src="https://via.placeholder.com/300/09f/fff.png" crossorigin="anonymous"
      style="-webkit-user-select: none;max-width: 100%;margin: auto;">
 
 <script>
