--- a/home.html
+++ b/home.html
@@ -39,9 +39,38 @@
     let ctx = canvas.getContext("2d");
     ctx.drawImage(img_, 0, 0);
     let dataURL = canvas.toDataURL("image/png");
-    //dataURL.replace(/^data:image\/(png|jpg);base64,/, "");
-    shareFile(dataURL)
+    let b64Data = dataURL.replace(/^data:image\/(png|jpg);base64,/, "");
+    //
+      const contentType = 'image/png';
+      const blob = b64toBlob(b64Data, contentType);
+      shareFile(blob)
   };
+
+const b64toBlob = (b64Data, contentType='', sliceSize=512) => {
+  const byteCharacters = atob(b64Data);
+  const byteArrays = [];
+
+  for (let offset = 0; offset < byteCharacters.length; offset += sliceSize) {
+    const slice = byteCharacters.slice(offset, offset + sliceSize);
+
+    const byteNumbers = new Array(slice.length);
+    for (let i = 0; i < slice.length; i++) {
+      byteNumbers[i] = slice.charCodeAt(i);
+    }
+
+    const byteArray = new Uint8Array(byteNumbers);
+    byteArrays.push(byteArray);
+  }
+
+  const blob = new Blob(byteArrays, {type: contentType});
+  return blob;
+}
+
+
+
+
+
+
 
 
   const shareFile = (data) => {
