--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
 <img id="img2" src="https://via.placeholder.com/300/09f/fff.png" 
      style="-webkit-user-select: none;max-width: 100%;margin: auto;">
 <img id="img3" src="https://via.placeholder.com/300/09f/fff.png" 
-     style="display:none">
+     style="-webkit-user-select: none;max-width: 100%;margin: auto;">
 
 <script>
   let url = new Request("Selection_309.png");
