--- a/home.html
+++ b/home.html
@@ -12,16 +12,15 @@
      style="-webkit-user-select: none;max-width: 100%;margin: auto;">
 
 <h2>hosted image</h2>
-<img id="img2" src="https://via.placeholder.com/300/09f/fff.png" 
-     style="-webkit-user-select: none;max-width: 100%;margin: auto;">
-<img id="img3" src="https://via.placeholder.com/300/09f/fff.png" 
-     style="-webkit-user-select: none;max-width: 100%;margin: auto;">
+<img id="img2" src="https://imaagesharebrowser.herokuapp.com/test.jpeg" 
+     style="-webkit-user-select: none;max-width: 300px;margin: auto;">
+
 
 <script>
   let url = new Request("Selection_309.png");
   const img1 = document.getElementById('img1');
   const img2 = document.getElementById('img2');
-  const img3 = document.getElementById('img3');
+
   const localImageShare = () => {
     createFile(url);
   };
@@ -34,12 +33,10 @@
 
   const hostedImageShare = () => {
     let canvas = document.createElement("canvas");
-
-    img3.crossOrigin = "anonymous";
     canvas.width = 300;
     canvas.height = 300;
     let ctx = canvas.getContext("2d");
-    ctx.drawImage(img3, 0, 0);
+    ctx.drawImage(img2, 0, 0);
     let imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
     let dataURL = canvas.toDataURL("image/png");
 
